--- a/src/app/componentes/lista-investimentos/lista-investimentos.component.html
+++ b/src/app/componentes/lista-investimentos/lista-investimentos.component.html
@@ -1,27 +1,21 @@
 <div>
     <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <!-- Position Column -->
-        <ng-container matColumnDef="position">
-            <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
+        <ng-container matColumnDef="nome">
+            <mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.nome}} </mat-cell>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+        <ng-container matColumnDef="objetivo">
+            <mat-header-cell *matHeaderCellDef> Objetivo </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.objetivo}} </mat-cell>
         </ng-container>
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-            <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
-        </ng-container>
-
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-            <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+        <ng-container matColumnDef="saldoTotalDisponivel">
+            <mat-header-cell *matHeaderCellDef> Saldo Total Disponível </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.saldoTotalDisponivel}} </mat-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
