--- a/src/app/componentes/lista-investimentos/lista-investimentos.component.html
+++ b/src/app/componentes/lista-investimentos/lista-investimentos.component.html
@@ -1,4 +1,5 @@
 <div>
+    <h1>Investimentos</h1>
     <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <!-- Position Column -->
         <ng-container matColumnDef="nome">
