--- a/src/app/componentes/lista-investimentos/lista-investimentos.component.html
+++ b/src/app/componentes/lista-investimentos/lista-investimentos.component.html
@@ -20,6 +20,6 @@
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="abrirResgate(row)"></mat-row>
     </mat-table>
 </div>
