criando tela de Resgate

--- a/src/app/componentes/detalhe-resgate/detalhe-resgate.component.html
+++ b/src/app/componentes/detalhe-resgate/detalhe-resgate.component.html
@@ -1,1 +1,30 @@
-<p>detalhe-resgate works!</p>
+<div>
+    <h1>Resgate</h1>
+    <div>
+        <h2>
+            Dados do Investimento
+        </h2>
+        <div>
+            <div>
+                <p>Nome</p>
+                <p>Investimento 1</p>
+            </div>
+            <div>
+                <p>Saldo total disponível</p>
+                <p>R$ XX.XXX,xx</p>
+            </div>
+            <div>
+                <p>Valor total a resgatar</p>
+                <p>R$ XX.XXX,xx</p>
+            </div>
+        </div>
+    </div>
+    <div>
+        <h2>Resgate do Seu Jeito</h2>
+        <table></table>
+    </div>
+    <div>
+        <button (click)="retornarPagina()">Cancelar</button>
+        <button (click)="abrirModal()">Confirmar Resgate</button>
+    </div>
+</div>
