passando parametros entre componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-lista-investimentos *ngIf="pagina == 1"></app-lista-investimentos>
-<app-detalhe-resgate *ngIf="pagina == 2"></app-detalhe-resgate>
+<app-detalhe-resgate *ngIf="pagina == 2" [parentData]="investimentoSelecionado"></app-detalhe-resgate>
