--- a/src/app/componentes/detalhe-resgate/detalhe-resgate.component.html
+++ b/src/app/componentes/detalhe-resgate/detalhe-resgate.component.html
@@ -23,7 +23,7 @@
             <div>
                 <div class="borda-esquerda pl-24p">
                     <p>Valor total a resgatar</p>
-                    <p>R$ {{resgateTotal || 0}}</p>
+                    <p>{{resgateTotal || 0 | currency:'BRL':true}}</p>
                 </div>
             </div>
         </div>
@@ -49,7 +49,12 @@
                 <ng-container matColumnDef="saldoTotalDisponivel">
                     <mat-header-cell *matHeaderCellDef> VALOR A RESGATAR </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <input type="text" [id]="element.id" (change)="atualizaValoresResgatar($event)">
+                        <input 
+                        currencyMask 
+                        [(ngModel)]="element.valor" 
+                        placeholder="R$ 0,00" 
+                        [id]="element.id"
+                        (keyup)="atualizaValoresResgatar(element.valor, element.id)"/>
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
